# dotfiles

./: .gitignore  README.md  Rprofile  aerospace.toml  alacritty.yml  eslintrc.js  gemrc  gitignore_global  init.vim  latexmkrc  lintr  muttrc  npmrc  p10k.zsh  package.json  pnpm-lock.yaml  rcrc  skhdrc  tmux.conf  tool-versions  vimrc  zlogin  zprofile  zshenv  zshrc
config/: starship.toml
config/aerospace/: aerospace.toml
config/ghostty/: config
config/kanata/: main.kbd
config/kitty/: fonts.conf  keymaps.conf  kitty.conf  nord.conf
config/kitty/themes/: everforest-dark-medium.conf  everforest-light-medium.conf  nord.conf  snow-light.conf
config/marksman/: config.toml
config/nushell/: aliases.nu  config.nu  env.nu  history.txt  login.nu  starship.nu
config/nvim/: init.lua
config/nvim/ftplugin/: html.lua  java.lua  markdown.lua  markdown.vim  python.lua  quarto.lua  tex.lua  toml.lua
config/nvim/lua/: keymaps.lua  maps.lua  neorg-treesitter.lua  options.lua  plugins.lua  set.lua  settings.lua  statusline.lua
config/nvim/snippets/: java.lua  lua.lua  markdown.lua  pandoc.lua  quarto.lua  tex.lua  tex.snippets  texx.lua
config/sketchybar/: bar.lua  colors.lua  default.lua  icons.lua  settings.lua  sketchybarrc
config/sketchybar/helpers/: app_icons.lua
config/sketchybar/items/: aerospace.sh  apple.lua  (+5 more)
config/wezterm/: wezterm.lua
config/zellij/: config.kdl
uv-tools/ventilate/: main.py  pyproject.toml
uv-tools/ventilate-md/: pyproject.toml
uv-tools/ventilate-md/ventilate_md/: cli.py
uv-tools/ventilate/ventilate/: cli.py
zsh/: aliases
(+109 files in other folders)
