[project] 
name = "ventilate-md" 
version = "0.1.0" 
description = "Markdown ventilated prose formatter using spaCy" 
requires-python = ">=3.11,<3.14" 
dependencies = [ "numpy==1.26.4", "spacy>=3.7", 
"en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl", 
] 

[project.scripts] 
ventilate-md = "ventilate_md.cli:main" 

[build-system] 
requires = ["hatchling"] 
build-backend = "hatchling.build" 

[tool.hatch.build.targets.wheel] 
packages = ["ventilate_md"] 

[tool.hatch.metadata] 
allow-direct-references = true
